--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <div class="left-side">
                 <div class="profileText">
                         <div class="imgBx">
-                                <img src="images/Design-carre.png" alt="">
+                                <img src="images/Design-carre.png" alt="image de profil">
 
                         </div>
                         <h2>Johan Hoarau <br><span>Développeur Web & Web Mobile</span></h2>
